--- a/QuanLiHocSinh/QuanLiHocSinh/Properties/Resources.resx
+++ b/QuanLiHocSinh/QuanLiHocSinh/Properties/Resources.resx
@@ -118,14 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="student_icon copy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\student_icon copy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="HuongDan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\HuongDan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="notus-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\notus-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Chonanh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\Chonanh.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="search_user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\search_user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -135,9 +132,6 @@
   </data>
   <data name="Sua" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Sua.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="winBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\winBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Truoc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Truoc.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,6 +175,9 @@
   <data name="ismages copy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\ismages copy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="danhsach" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\danhsach.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Them1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Them.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -193,11 +190,17 @@
   <data name="phuchoi" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\phuchoi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ThamSo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\ThamSo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="winVistaClass" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\winVistaClass.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="winBlue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\winBlue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="902759421" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\902759421.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="classroom_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\classroom_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -220,8 +223,8 @@
   <data name="Search" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="902759421" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\902759421.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="student_icon copy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\student_icon copy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Untitled-d" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Untitled-d.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -232,8 +235,8 @@
   <data name="Teacher-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Teacher-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Chonanh" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\Chonanh.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="notus-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\notus-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Teacher_Female_Dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Teacher_Female_Dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -241,10 +244,10 @@
   <data name="Them" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Them.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ThamSo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\ThamSo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="winBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\winBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="danhsach" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\danhsach.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Timkiem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\Timkiem.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
